# gps_log_generator

./: .gitignore  gps_log_generator.py  main.py  pyproject.toml  readme.md  requirements.txt
coordinate/: coord_cal.py  coord_main.py
data/: readme.md
gps_log_generator_app/: __init__.py  __main__.py  cli.py  db_parser.py  favorites.py  flag_defs.py  geo_utils.py  gps_log_generator.py  runtime_paths.py
